--- a/custom.css
+++ b/custom.css
@@ -7,7 +7,7 @@
 .main{
     width: 100%;
     height: 100vh;
-    background-image: url('../image/hr.jpg');
+    background-image: url('hr.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
